--- a/lab_pt1.glade
+++ b/lab_pt1.glade
@@ -30,6 +30,18 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment3">
+    <property name="lower">6</property>
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment4">
+    <property name="lower">1</property>
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkEntryCompletion" id="entrycompletion1"/>
   <object class="GtkListStore" id="m param list">
     <columns>
@@ -79,6 +91,13 @@
         <col id="0">40</col>
       </row>
     </data>
+  </object>
+  <object class="GtkAdjustment" id="x_value_adjustment">
+    <property name="lower">1</property>
+    <property name="upper">100</property>
+    <property name="value">20</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
   <object class="GtkWindow" id="Main Window">
     <property name="can_focus">False</property>
@@ -218,20 +237,20 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry" id="x_length_entry">
+                      <object class="GtkSpinButton" id="x_length_spin_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="halign">center</property>
                         <property name="valign">center</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
-                        <property name="max_length">2</property>
-                        <property name="width_chars">2</property>
-                        <property name="max_width_chars">2</property>
-                        <property name="text" translatable="yes">20</property>
-                        <property name="caps_lock_warning">False</property>
+                        <property name="max_length">3</property>
+                        <property name="width_chars">3</property>
+                        <property name="max_width_chars">3</property>
                         <property name="input_purpose">number</property>
-                        <signal name="changed" handler="onChangedX" swapped="no"/>
+                        <property name="adjustment">x_value_adjustment</property>
+                        <property name="value">20</property>
+                        <signal name="value-changed" handler="onChangedX" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -849,19 +868,45 @@ g(x)=alpha/sqrt(pi)×exp(-(alpha×x)**2)</property>
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">5</property>
-                <property name="margin_right">5</property>
-                <property name="margin_top">50</property>
-                <property name="margin_bottom">50</property>
-                <property name="spacing">5</property>
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkLabel">
+                  <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="halign">baseline</property>
-                    <property name="valign">center</property>
-                    <property name="hexpand">True</property>
-                    <property name="label" translatable="yes">Полуширина аппаратной функции =</property>
+                    <property name="margin_top">5</property>
+                    <property name="margin_bottom">5</property>
+                    <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="valign">center</property>
+                        <property name="hexpand">True</property>
+                        <property name="label" translatable="yes">Ширина окна =</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSpinButton" id="fwhl_window_spin">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="max_length">3</property>
+                        <property name="width_chars">3</property>
+                        <property name="max_width_chars">3</property>
+                        <property name="adjustment">adjustment3</property>
+                        <property name="value">6</property>
+                        <signal name="value-changed" handler="onWindowChangedFWHL" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -870,41 +915,49 @@ g(x)=alpha/sqrt(pi)×exp(-(alpha×x)**2)</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="fwhl_entry">
+                  <object class="GtkBox">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="halign">start</property>
-                    <property name="valign">center</property>
-                    <property name="hexpand">True</property>
-                    <property name="max_length">3</property>
-                    <property name="width_chars">3</property>
-                    <property name="max_width_chars">3</property>
-                    <property name="text" translatable="yes">1</property>
-                    <property name="input_purpose">number</property>
-                    <signal name="changed" handler="onChangedFWHL" swapped="no"/>
+                    <property name="can_focus">False</property>
+                    <property name="margin_top">5</property>
+                    <property name="margin_bottom">5</property>
+                    <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="valign">center</property>
+                        <property name="hexpand">True</property>
+                        <property name="label" translatable="yes">Полуширина аппаратной функции =</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSpinButton" id="fwhl_value">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="max_length">3</property>
+                        <property name="width_chars">3</property>
+                        <property name="max_width_chars">3</property>
+                        <property name="text" translatable="yes">6</property>
+                        <property name="adjustment">adjustment4</property>
+                        <property name="value">1</property>
+                        <signal name="value-changed" handler="onChangedFWHL" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="fwhl_button">
-                    <property name="label" translatable="yes">Вычислить</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="halign">end</property>
-                    <property name="valign">center</property>
-                    <property name="margin_right">10</property>
-                    <signal name="clicked" handler="plotFWHL" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="pack_type">end</property>
-                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
@@ -982,6 +1035,68 @@ g(x)=alpha/sqrt(pi)×exp(-(alpha×x)**2)</property>
           </object>
           <packing>
             <property name="position">2</property>
+            <property name="tab_fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkGrid" id="tab4">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="column_spacing">5</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="width_request">300</property>
+                <property name="height_request">300</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_left">5</property>
+                <property name="margin_right">5</property>
+                <property name="margin_top">5</property>
+                <property name="margin_bottom">5</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="label" translatable="yes">формулки</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow" id="fwhl_fourier">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="valign">start</property>
+                <property name="margin_left">10</property>
+                <property name="margin_right">10</property>
+                <property name="margin_top">10</property>
+                <property name="margin_bottom">10</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="min_content_width">400</property>
+                <property name="min_content_height">300</property>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">0</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="position">3</property>
+          </packing>
+        </child>
+        <child type="tab">
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Шаг 4</property>
+          </object>
+          <packing>
+            <property name="position">3</property>
             <property name="tab_fill">False</property>
           </packing>
         </child>
