"Очистить всё" on tab9 works, have to make "Удалить строку" work

--- a/lab_pt1.glade
+++ b/lab_pt1.glade
@@ -2169,6 +2169,7 @@ g(x)=alpha/sqrt(pi)×exp(-(alpha×x)**2)</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
+                            <signal name="clicked" handler="onDeleteAllRows" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
